404 Fix, Connect page spacing

--- a/wp-content/themes/AGDesign/styles/sass/screen.scss
+++ b/wp-content/themes/AGDesign/styles/sass/screen.scss
@@ -733,6 +733,13 @@ display: none;
 			width: 47.5%;
 		}
 	}
+
+	.lower-content{
+		.column{
+			margin-top: 0;
+		}
+	}
+
 	ul {
 		li {
 			list-style: none;
